<resources>
    <string name="app_name">Yet Another Pokemon List</string>
    <string name="btn_next">Next</string>
    <string name="btn_previous">Previous</string>
    <string name="header_pokemons">Pokemons</string>
    <string name="btn_pokemons">Pokemons</string>
    <string name="btn_abilities">Abilities</string>
    <string name="btn_berries">Berries</string>
    <string name="btn_locations">Locations</string>
    <string name="tv_pokemon">Pokemon</string>
    <string name="tv_pokemon_types">Types</string>
    <string name="tv_pokemon_abilities">Abilities</string>
    <string name="tv_block_characteristics">Characteristics</string>
    <string name="tv_pokemon_height">Height</string>
    <string name="tv_pokemon_weight">Weight</string>
    <string name="tv_pokemon_base_experience">Base Experience</string>
    <string name="tv_pokemon_species_default">Species Default</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tv_pokemon_stats">Stats</string>
    <string name="iv_pokemon_sprite_front">Sprint of the front view of the Pokemon</string>
    <string name="iv_pokemon_sprite_back">Sprint of the back view of the Pokemon</string>
    <string name="tv_pokemon_moves">Moves</string>
    <string name="tv_pokemon_held_items">Held Items</string>
    <string name="empty_list">No items found</string>
    <string name="tv_ability">Ability</string>
    <string name="tv_ability_pokemons">Owned by pokemons</string>
    <string name="tv_ability_effect_change">Previous Effects Across Version Groups </string>
    <string name="tv_ability_effect_entries">Effects</string>
    <string name="tv_ability_flavor">Flavors</string>
    <string name="tv_ability_from_main_serie">Is from main series</string>
    <string name="tv_ability_generation">Generation</string>
    <string name="tv_menu_pokemons">Pokemons Data</string>
    <string name="tv_menu_berries">Berries Data</string>
    <string name="tv_menu_locations">Locations Data</string>
    <string name="tv_berry_flavors">Flavors</string>
    <string name="tv_berry_firmness">Firmness</string>
    <string name="tv_berry_item">Provide item</string>
    <string name="tv_berry_max_harvest">Max Harvests</string>
    <string name="tv_berry_natural_gift_power">Natural Gift Power</string>
    <string name="tv_berry_natural_gift_type">Natural Gift Type</string>
    <string name="tv_berry_size">Size</string>
    <string name="tv_berry_smoothness">Smoothness</string>
    <string name="tv_berry_soil_dryness">Soil Dryness</string>
    <string name="tv_berry_grown_time">Grown Time</string>
    <string name="tv_berry">Berry</string>
    <string name="tv_menu_misc">Misc</string>
    <string name="btn_random">Open a random page</string>
    <string name="btn_find">Search</string>
    <string name="btn_search_page">Find a page</string>
    <string name="tv_page_to_search">Page to search</string>
    <string name="tv_item_id_to_search">ID of the item</string>
    <string name="tv_available_id">Available IDs</string>
    <string name="tv_location_game_indices">Game Indices</string>
    <string name="tv_location_region">Region</string>
    <string name="tv_location_area">Area</string>
    <string name="tv_location">Location</string>
</resources>