<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".berry.BerryActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/header_page" />

        <!-- Page body -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                style="@style/LayoutPageBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- General Data -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/LayoutBlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextViewSection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_block_characteristics" />

                    <!-- Grown Time -->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextViewLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/tv_berry_grown_time" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_berry_grown_time"
                            style="@style/TextViewValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <!-- Firmness -->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextViewLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/tv_berry_firmness" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_berry_firmness"
                            style="@style/TextViewValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <!-- Item -->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextViewLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/tv_berry_item" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_berry_item"
                            style="@style/TextViewValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <!-- Max harvest -->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextViewLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/tv_berry_max_harvest" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_berry_max_harvest"
                            style="@style/TextViewValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <!-- Natural Gift Power -->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextViewLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/tv_berry_natural_gift_power" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_berry_natural_gift_power"
                            style="@style/TextViewValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <!-- Natural Gift Type -->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextViewLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/tv_berry_natural_gift_type" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_berry_natural_gift_type"
                            style="@style/TextViewValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <!-- Size -->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextViewLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/tv_berry_size" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_berry_size"
                            style="@style/TextViewValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <!-- Smoothness -->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextViewLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/tv_berry_smoothness" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_berry_smoothness"
                            style="@style/TextViewValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <!-- Soil Dryness -->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextViewLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/tv_berry_soil_dryness" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_berry_soil_dryness"
                            style="@style/TextViewValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!-- Flavors -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_berry_flavors"
                    style="@style/LayoutBlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextViewSection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_berry_flavors" />

                    <!-- Items added here in runtime -->

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>